# rust-os

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  interrupts.rs  logger.rs  main.rs  screen.rs  testing.rs
kernel/src/io/: mod.rs  serial.rs  vga.rs
kernel/src/utils/: bits.rs
src/: main.rs  test_runner.rs
