[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
default-run = "rust-os"

[workspace]
members = ["kernel"]

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[[bin]]
name = "test-runner"
path = "src/test_runner.rs"

[dependencies]
regex = "1.11"
bootloader = "0.11"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
